<resources>
    <string name="app_name">Filmipedia</string>

    <string name="trailer">Trailers</string>
    <string name="movie_details">Movie Details</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search here…</string>
    <string name="action_browse">Browse</string>
    <string name="action_home">Home</string>
    <string name="empty_view">Empty view</string>
    <string name="movie_poster">Movie poster</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="people">People</string>
    <string name="placeholder_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tellus at urna condimentum mattis pellentesque id nibh tortor. Sed vulputate odio ut enim blandit volutpat maecenas.</string>
    <string name="birthday">Birthday: </string>
    <string name="deathday">Deathday:</string>
    <string name="cast">Cast</string>
    <string name="crew">Crew</string>
    <string name="share">Share</string>
    <string name="release_date">Release Date:</string>
    <string name="rating">Rating:</string>
    <string name="extras">Extras</string>
    <string name="query_1">Show actor\'s movies</string>
    <string name="query_2">Show actor\'s fellow cast mates and movies</string>
    <string name="query_3">Show actor\'s fellow directors and movies</string>
    <string name="query_4">Get director\'s best genres</string>
    <string name="query_5">Get actor\'s best genres</string>
    <string name="query_6">Get most popular genres</string>
    <string name="query_7">Get low rated movies with high revenue</string>
    <string name="query_8">Get movies by a production company made after a year</string>
    <string name="query_9">Get movies directed/produced by a given director/producer</string>
    <string name="material_dialog_title">Provide the necessary details</string>
    <string name="actors_name">Actor\'s name:</string>
    <string name="directors_name">Director\'s name:</string>
    <string name="year">Year:</string>
    <string name="company">Company:</string>
    <string name="director">Director</string>
    <string name="producer">Producer</string>
    <string name="name">Name:</string>
</resources>
